# haiman-counterexample-audit

./: .gitignore  CITATION.cff  JOURNAL.md  LICENSE-DOCS.md  MEMORY.md  PLAN.md  README.md  STATUS.json  requirements-ci.txt
.github/workflows/: pages.yml  validate-book.yml
artifacts/common/: SPEC.md  analyze_minor_weight.py  enumerate_weight_supports.py  reduce_symmetric_multiplicities.py  verify_specialization.py
artifacts/magma/: README.md  verify_minor.m
artifacts/oscar/: Manifest.toml  README.md  verify_minor.jl
artifacts/rust/: Cargo.toml  README.md
artifacts/rust/src/: main.rs
artifacts/sage/: README.md  compute_symmetric_multiplicities.sage  enumerate_predecessors.sage  generate_matrix.sage
artifacts/singular/: README.md  verify_minor.sing
book/: _config.yml  _toc.yml  book-spec.json  intro.md  references.bib
book/chapters/: certificates.md  coordinates.md  degree89_attack_plan.md  geometry.md  implementations.md  lemma19.md  paper_logic.md  problem.md  verdict.md
book/notebooks/: matrix_counts.ipynb
docs/: README.md
reports/: lemma19_89_minor_report.tex
research-vault/.obsidian/: app.json
research-vault/00-index/: Home.md
research-vault/01-sources/: Lee 2010.md
research-vault/02-mathematics/: Claim dependency graph.md  Notation and objects.md
research-vault/03-algorithms/: Lemma 19 reconstruction.md  Matrix M specification.md
research-vault/06-certificates/: Evidence ledger.md
scripts/: execute-notebooks.sh  execute_notebooks.py  validate-all.sh  validate-book.sh
sources/: README.md  source-manifest.json
(+19 files in other folders)
