[package]
name = "haiman-certificate-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Independent verifier for certificates in the Lee 2010 Haiman-conjecture audit"
default-run = "haiman-certificate-verifier"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
